--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "mocha": "^2.3.4",
+    "should": "^8.1.1"
   }
 }
