--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/callumacrae/jNearly#readme",
   "devDependencies": {
+    "autoprefixer": "^6.3.1",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
@@ -24,8 +25,15 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
+    "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
+    "marked": "^0.3.5",
     "mocha": "^2.3.4",
-    "should": "^8.1.1"
+    "normalize.css": "^3.0.3",
+    "nunjucks": "^2.3.0",
+    "postcss-import": "^7.1.3",
+    "should": "^8.1.1",
+    "through2": "^2.0.0",
+    "vinyl": "^1.1.0"
   }
 }
