--- a/package.json
+++ b/package.json
@@ -2,38 +2,34 @@
   "name": "jnearly",
   "version": "0.1.0",
   "description": "Like jQuery, but ES6.",
-  "main": "index.js",
+  "main": "dist/jnearly.umd.js",
   "scripts": {
+    "prepublish": "gulp js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/callumacrae/jNearly.git"
+    "url": "git+https://github.com/jNearly/jNearly.git"
   },
   "author": "Callum Macrae <callum@macr.ae>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/callumacrae/jNearly/issues"
+    "url": "https://github.com/jNearly/jNearly/issues"
   },
-  "homepage": "https://github.com/callumacrae/jNearly#readme",
+  "homepage": "https://github.com/jNearly/jNearly#readme",
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.4.3",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "babel-register": "^6.4.3",
+    "browser-sync": "^2.11.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-postcss": "^6.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
-    "marked": "^0.3.5",
     "mocha": "^2.3.4",
-    "normalize.css": "^3.0.3",
-    "nunjucks": "^2.3.0",
-    "postcss-import": "^7.1.3",
-    "should": "^8.1.1",
-    "through2": "^2.0.0",
-    "vinyl": "^1.1.0"
+    "should": "^8.1.1"
   }
 }
